fix color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #038eff;
+    --primary: #046AFF;
     --secondary: #0B2154;
     --light: #F2F2F2;
     --dark: #111111;
